--- a/deployment/deployment-app.yaml
+++ b/deployment/deployment-app.yaml
@@ -35,8 +35,15 @@ spec:
            name: app-config
         - secretRef:
            name: app-secret
+        resources:
+           requests:
+               memory: "250Mi"                  
+               cpu: 0.5                           
+           limits:
+              memory: "500Mi"                   
+              cpu: 1
 
-       
+        
 ---
 apiVersion: v1
 kind: Service
