--- a/deployment/deployment-redis.yaml
+++ b/deployment/deployment-redis.yaml
@@ -29,7 +29,14 @@ spec:
         image: redis:alpine
         ports:
         - containerPort: 6379
-
+        resources:
+           requests:
+               memory: "250Mi"                  
+               cpu: 0.5                           
+           limits:
+              memory: "500Mi"                   
+              cpu: 1
+---
 apiVersion: v1
 kind: Service
 metadata:
