--- a/deployment/deployment-app.yaml
+++ b/deployment/deployment-app.yaml
@@ -42,6 +42,27 @@ spec:
            limits:
               memory: "500Mi"                   
               cpu: 1
+        readinessProbe:
+          httpGet:
+            path: /
+            port: 5000
+          initialDelaySeconds: 20
+          periodSeconds: 5
+        livenessProbe:
+          httpGet:
+             path: /
+             port: 5000
+          initialDelaySeconds: 30
+          periodSeconds: 5
+        startupProbe:
+          exec:
+            command:
+            - nc 
+            - -zv
+            - redis 
+            - "6379"
+          failureThreshold: 30
+          periodSeconds: 5
 
         
 ---
