--- a/deployment/deployment-redis.yaml
+++ b/deployment/deployment-redis.yaml
@@ -36,6 +36,20 @@ spec:
            limits:
               memory: "500Mi"                   
               cpu: 1
+        livenessProbe:
+            exec:
+              command:
+              - redis-cli
+              - ping
+            initialDelaySeconds: 20
+            timeoutSeconds: 5
+        readinessProbe:
+            exec:
+              command:
+              - redis-cli
+              - ping
+            initialDelaySeconds: 10
+            timeoutSeconds: 5
 ---
 apiVersion: v1
 kind: Service
