removing load balancer type from webapp service

--- a/deployment/deployment-app.yaml
+++ b/deployment/deployment-app.yaml
@@ -74,7 +74,7 @@ metadata:
   labels:
     name: myapp-service
 spec:
-  type: LoadBalancer 
+  #type: LoadBalancer 
   ports:
     - port: 80  
       protocol: TCP
